--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 			<artifactId>selenium-server</artifactId>
 			<version>2.18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
