--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
+
+my.family.house.start=false
+wo.job.start=true
+baidu.map.area.start=false
